<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.suffolk.jsimons3.mortgagecalculator.MainActivity"
    tools:showIn="@layout/activity_main">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchaseprice"
            android:id="@+id/purchaseprice"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downpayment"
            android:id="@+id/downpayment"
            android:layout_row="1"
            android:layout_column="0" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downpaymenttextview"
            android:id="@+id/downpaymenttextview"
            android:layout_row="1"
            android:layout_column="1" />

    <TextView
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:text="@string/purchasepricetextview"
        android:layout_row="0"
        android:layout_column="1"
        android:id="@+id/purchasepricetextview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interestratetextview"
        android:id="@+id/interestratetextview"
        android:layout_row="2"
        android:layout_column="1" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:textColor="#00000000"
            android:id="@+id/purchasepricenum"
            android:layout_row="0"
            android:layout_column="1"
            android:autoText="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textColor="#00000000"
        android:id="@+id/downpaymentnum"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/downpaymentnum" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:textColor="#00000000"
        android:id="@+id/interestratenum"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/interestratenum" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interestrate"
            android:id="@+id/interestrate"
            android:layout_row="2"
            android:layout_column="0" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customloan"
            android:id="@+id/customloan"
            android:layout_row="3"
            android:layout_column="0" />

        <SeekBar
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:id="@+id/loanseekBar"
            android:layout_row="4"
            android:layout_column="1"
            android:indeterminate="false"
            android:max="20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customamountnum"
            android:id="@+id/customamountnum"
            android:layout_row="5"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthlypayment"
            android:id="@+id/monthlypayment"
            android:layout_row="6"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenyearsnum"
            android:id="@+id/tenyearsnum"
            android:layout_row="7"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twentyyearsnum"
            android:id="@+id/twentyyearsnum"
            android:layout_row="8"
            android:layout_column="1" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirtyyearsnum"
            android:id="@+id/thirtyyearsnum"
            android:layout_row="9"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customamount"
            android:id="@+id/customamount"
            android:layout_row="5"
            android:layout_column="0" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenyears"
            android:id="@+id/tenyears"
            android:layout_row="7"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twentyyears"
            android:id="@+id/twentyyears"
            android:layout_row="8"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirtyyears"
            android:id="@+id/thirtyyears"
            android:layout_row="9"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custommonthlypayment"
            android:id="@+id/custompayment"
            android:layout_row="10"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custompaymentview"
            android:id="@+id/custompaymentview"
            android:layout_row="11"
            android:layout_column="1" />

    </GridLayout>

